# ros2_prj1

./: .gitignore  README.md
cobot1/: README.md  package.xml  setup.py
cobot1/cobot1/: block1_1.py  force_test.py  move.py  move_periodic.py
cobot1_system/: CLAUDE.md  extimate_tilt.py  package.xml  setup.cfg  setup.py
cobot1_system/cobot1_system/: camera_node.py  camera_publisher.py  central_node.py  conveyor_node.py  db_node.py  hmi_ui.py  robot_arm_node.py  robot_motion.py  ui_node.py
cobot1_system/launch/: cobot1_system.launch.py  full_system.launch.py
cobot1_system/tools/: calibrate_corners.py
custom_interfaces/: CMakeLists.txt  package.xml
custom_interfaces/action/: PickAndPlace.action
custom_interfaces/msg/: DecrementItem.msg
custom_interfaces/srv/: DetectObject.srv  StartTask.srv  UpdateInventory.srv
pjt1/: grip_target.py
src/cobot1/: package.xml  setup.py
src/cobot1/cobot1/move.py/: move.py
src/rg2/m0609_rg2_bringup/launch/: bringup.launch.py  bringup_camera.launch.py
src/rg2/m0609_rg2_bringup/rviz/: default.rviz
src/rg2/m0609_rg2_moveit/config/: m0609_rg2.srdf  moveit_controllers.yaml
test/: block1_1.py  force2.drl  force_test.py
ui/: robot_cam.py  robot_cam.ui  robot_dash_board.py  robot_dash_board.ui
yolo_pub/: README.md  setup.py
yolo_pub/yolo_pub/: camera_publisher.py  yolo_detector.py  yolo_seg.py
